--- a/css/style.css
+++ b/css/style.css
@@ -83,6 +83,7 @@ img {
   background-color: #fff;
   height: 100vh;
   width: 100vw;
+  z-index: 5;
 }
 
 .close-btn-modile-menu {
@@ -484,7 +485,7 @@ img {
 }
 
 .customers-cards ul li {
-  width: 210px;
+  width: 100%;
   height: 92px;
   border-radius: 4px;
   border: 1px solid #afb1b8;
@@ -503,11 +504,11 @@ img {
   gap: 30px; */
   display: grid;
   gap: 30px;
-  grid-template-columns: auto auto;
-  padding: 0 15px;
+  grid-template-columns: repeat(2, 1fr);
   margin-top: 50px;
   margin-bottom: 94px;
   justify-content: center;
+  padding: 0 15px;
 }
 
 .customers-cards ul li:hover,
@@ -631,6 +632,7 @@ img {
   align-items: center;
   gap: 20px;
   margin-bottom: 60px;
+  width: 100%;
 }
 
 .form h3 {
@@ -648,10 +650,12 @@ img {
   gap: 12px;
   flex-direction: column;
   align-items: center;
+  width: 100%;
+  padding: 0 15px;
 }
 
 .footer-email-form input {
-  width: 450px;
+  width: 100%;
   height: 50px;
   border-radius: 4px;
   border: 1px solid #ffffff4d;
@@ -659,6 +663,11 @@ img {
   box-shadow: 0px 4px 4px 0px #00000026;
   padding-left: 16px;
   color: #fff;
+}
+
+.footer-email-form {
+  width: 100%;
+  max-width: 450px;
 }
 
 .footer-form-btn {
@@ -693,7 +702,7 @@ img {
   gap: 30px;
   margin-bottom: 94px;
   margin-top: 50px;
-  margin-left: 200px;
+  /* margin-left: 200px; */
   flex-wrap: wrap;
   box-sizing: content-box;
   width: 100%;
@@ -740,30 +749,26 @@ img {
 }
 
 .section-buttons {
+  flex-wrap: wrap;
+  justify-content: start;
+  margin-left: 15px;
   display: flex;
-  justify-content: center;
+  /* justify-content: center; */
   align-items: center;
   gap: 8px;
   margin-top: 94px;
+  width: 300px;
 }
 
 .section-buttons button {
-  height: 38px;
+  height: 48px;
   flex-shrink: 0;
   border-radius: 4px;
   background: #f5f4fa;
   border-color: #f5f4fa;
   padding: 6px 22px 6px 22px;
-}
-
-.portfolio-text-button {
-  color: #212121;
-  text-align: center;
-  font-size: 16px;
-  font-style: normal;
-  font-weight: 500;
-  line-height: 26px;
   letter-spacing: 0.48px;
+  font-weight: 500;
 }
 
 .project-name {
@@ -1042,7 +1047,7 @@ input[type="email"]:focus,
   }
 
   .customers-cards ul {
-    grid-template-columns: auto auto auto;
+    grid-template-columns: repeat(3, 1fr);
     margin-bottom: 60px;
   }
 
@@ -1065,6 +1070,25 @@ input[type="email"]:focus,
 
   .footer-section .social-links-footer {
     margin-left: 165px;
+  }
+
+  .card {
+    width: 354px;
+    height: 440px;
+  }
+
+  .cards {
+    display: grid;
+    grid-template-columns: auto auto;
+  }
+
+  .section-buttons {
+    justify-content: center;
+    width: 100%;
+  }
+
+  .overlay-card {
+    width: 100%;
   }
 }
 /* Dekstop */
@@ -1121,6 +1145,7 @@ input[type="email"]:focus,
   .what-we-do-cards-container {
     display: block;
     margin-bottom: 94px;
+    padding: 0 15px;
   }
 
   .what-we-do-photos {
@@ -1190,6 +1215,7 @@ input[type="email"]:focus,
     display: flex;
     flex-direction: row;
     gap: 94px;
+    padding: 0 15px;
   }
 
   .logo-and-adress {
@@ -1211,6 +1237,16 @@ input[type="email"]:focus,
 
   .footer-section .social-links-footer {
     margin-left: 0;
+  }
+
+  /* portfolio page */
+
+  .cards {
+    display: flex;
+  }
+
+  .section-buttons {
+    justify-content: center;
   }
 
   /* Modal */
